[gd_scene load_steps=4 format=2]

[ext_resource path="res://levels/main_level/cells/normal_cell/normal_cell.gd" type="Script" id=1]
[ext_resource path="res://levels/shooting_range/materials/concrete.tres" type="Material" id=2]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.568627, 0.568627, 0.568627, 1 )

[node name="NormalCell" type="CSGCombiner"]
script = ExtResource( 1 )

[node name="Floor" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 0.25, 0, 0, 0, 1, 0, -0.25, 0 )
use_collision = true
width = 4.0
depth = 4.0
material = ExtResource( 2 )

[node name="FrontWall" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.05, 0.005, 1.5, -2 )
use_collision = true
width = 4.0
height = 3.0
material = SubResource( 1 )

[node name="LeftWall" type="CSGBox" parent="."]
transform = Transform( -4.37114e-08, 0, 0.05, 0, 1, 0, -1, 0, -2.18557e-09, -2, 1.5, 4.37114e-08 )
use_collision = true
width = 4.0
height = 3.0
material = SubResource( 1 )

[node name="RightWall" type="CSGBox" parent="."]
transform = Transform( -4.37114e-08, 0, -0.05, 0, 1, 0, 1, 0, -2.18557e-09, 2, 1.5, 4.37114e-08 )
use_collision = true
width = 4.0
height = 3.0
material = SubResource( 1 )

[node name="BackWall" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.05, 0, 1.5, 2 )
use_collision = true
width = 4.0
height = 3.0
material = SubResource( 1 )
